--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,13 +27,16 @@ services:
     image: postgres:13.1-alpine
     volumes:
       - postgres:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
     environment:
       - 'POSTGRES_PASSWORD=${DB_PASSWORD}'
+      - 'POSTGRES_USER=${DB_USERNAME}'
     networks:
       - bridge
 
   composer:
-    image: composer:2.0.7
+    image: composer:2.0.8
     command: composer install --no-dev
     working_dir: /var/www
     volumes:
