updated env to include public filesystem. Updater Userfactory to include remember_token. Added seeders for users and posts, removed --no-dev on composer in docker-compose. Added full timeline, with placeholder links (without href atm)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
 
   composer:
     image: composer:2.0.8
-    command: composer install --no-dev
+    command: composer install
     working_dir: /var/www
     volumes:
       - .:/var/www
