--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,6 @@ composer:
   script:
     - composer install --prefer-dist --no-ansi --no-interaction --no-progress --no-scripts
     - php artisan key:generate
-    - php artisan migrate
     - ln -s /var/www/storage/app/public/avatars public/avatars
     - ln -s /var/www/storage/app/public/banners public/banners
   cache:
@@ -61,3 +60,5 @@ deploy:
     - docker-compose -f docker-compose.deploy.yml build
     - docker-compose -f docker-compose.deploy.yml down
     - docker-compose -f docker-compose.deploy.yml up -d --force-recreate
+  after_script:
+    - docker exec qchan_api_1 php artisan migrate
