--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,9 @@ composer:
   script:
     - composer install --prefer-dist --no-ansi --no-interaction --no-progress --no-scripts
     - php artisan key:generate
+  after_script:
+  - ln -s /var/www/storage/app/public/avatars public/avatars
+  - ln -s /var/www/storage/app/public/banners public/banners
   cache:
     key: ${CI_COMMIT_REF_SLUG}-composer
     paths:
@@ -26,26 +29,6 @@ composer:
     expire_in: 1 days
     when: always
 
-phpunit:
-  stage: test
-  tags:
-    - dev
-  only:
-    - staging
-  dependencies:
-    - composer
-  script:
-    - phpunit --coverage-text --colors=never
-
-codestyle:
-  stage: test
-  tags:
-    - dev
-  only:
-    - staging
-  dependencies: []
-  script:
-    - phpcs --standard=PSR12 --extensions=php app/Http/Controllers/
 
 deploy:
   stage: deploy
@@ -60,5 +43,3 @@ deploy:
     - docker-compose -f docker-compose.deploy.yml up -d --force-recreate
   after_script:
     - docker exec qchan_api_1 php artisan migrate --force
-    - docker exec qchan_api_1 php ln -s /var/www/storage/app/public/avatars public/avatars
-    - docker exec qchan_api_1 php ln -s /var/www/storage/app/public/banners public/banners
