added mounted volume for storage, so avatars and banners will be backed up when there is a new deployment

--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -9,6 +9,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - .:/var/www
+      - storage:/var/www/storage/app/public
     networks:
       - bridge
 
@@ -40,4 +41,6 @@ networks:
 
 volumes:
   postgres:
+    driver: local
+  storage:
     driver: local
