--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,8 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 FILESYSTEM_DRIVER=public
+SPACES_ENDPOINT=https://ams3.digitaloceanspaces.com
+SPACES_REGION=eu-north-1
+SPACES_BUCKET=haakon
+SPACES_KEY=
+SPACES_SECRET=
