readded phpcs to test in pipeline, removed PHPUnit as there hasnt been made any real tests yet. Refactored Banner row in Users table to Background because it ended up being blocked by adblock since it has the word 'banner' in the storage directory

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,16 @@ composer:
     when: always
 
 
+codestyle:
+  stage: test
+  tags:
+    - dev
+  only:
+    - staging
+  dependencies: []
+  script:
+    - phpcs --standard=PSR12 --extensions=php app/Http/Controllers/
+
 deploy:
   stage: deploy
   only:
