added docker production yml. Refactored gitlab config temporarily for staging, will make specific for prod later. Refactored User getAttr for Avatar and BG to check first if using S3 else falling back to checking public filesystem and then defaulting to backup files. Changed some values in env to fit pipeline better

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,12 +11,13 @@ composer:
     - staging
   image: lorisleiva/laravel-docker:latest
   before_script:
-    - cp .env.docker .env
-    - echo "${SPACES_KEY}" >> .env
-    - echo "${SPACES_SECRET}" >> .env
+    - cp .env.production .env
   script:
     - composer install --prefer-dist --no-ansi --no-interaction --no-progress --no-scripts
     - php artisan key:generate
+  after_script:
+    - ln -s /var/www/storage/app/public/avatars public/avatars
+    - ln -s /var/www/storage/app/public/backgrounds public/backgrounds
   cache:
     key: ${CI_COMMIT_REF_SLUG}-composer
     paths:
@@ -47,7 +48,7 @@ deploy:
     - deploy
   image: tiangolo/docker-with-compose
   script:
-    - docker-compose -f docker-compose.deploy.yml down
-    - docker-compose -f docker-compose.deploy.yml up -d --force-recreate
+    - docker-compose -f docker-compose.staging.yml down
+    - docker-compose -f docker-compose.staging.yml up -d --force-recreate
   after_script:
     - docker exec qchan_api_1 php artisan migrate --force
