--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,18 +6,19 @@ stages:
 composer:
   stage: build
   tags:
-    - production
+    - staging
   only:
-    - production
+    - staging
   image: lorisleiva/laravel-docker:latest
   before_script:
     - cp .env.production .env
-    - echo "FILESYSTEM_DRIVER=spaces" >> .env
-    - echo "${SPACES_KEY}" >> .env
-    - echo "${SPACES_SECRET}" >> .env
   script:
     - composer install --prefer-dist --no-ansi --no-interaction --no-progress --no-scripts
     - php artisan key:generate
+  after_script:
+    - ln -s /var/www/storage/app/public/avatars public/avatars
+    - ln -s /var/www/storage/app/public/backgrounds public/backgrounds
+
   cache:
     key: ${CI_COMMIT_REF_SLUG}-composer
     paths:
@@ -33,9 +34,9 @@ composer:
 codestyle:
   stage: test
   tags:
-    - production
+    - staging
   only:
-    - production
+    - staging
   dependencies: []
   script:
     - phpcs --standard=PSR12 --extensions=php app/Http/Controllers/
@@ -43,12 +44,12 @@ codestyle:
 deploy:
   stage: deploy
   only:
-    - production
+    - staging
   tags:
-    - production
+    - staging
   image: tiangolo/docker-with-compose
   script:
-    - docker-compose -f docker-compose.prod.yml down
-    - docker-compose -f docker-compose.prod.yml up -d --force-recreate
+    - docker-compose -f docker-compose.staging.yml down
+    - docker-compose -f docker-compose.staging.yml up -d --force-recreate
   after_script:
     - docker exec qchan_api_1 php artisan migrate --force
