--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,8 @@ composer:
   script:
     - composer install --prefer-dist --no-ansi --no-interaction --no-progress --no-scripts
     - php artisan key:generate
+  after_script:
+    - echo "APP_URL=http://localhost" >> .env
 
   cache:
     key: ${CI_COMMIT_REF_SLUG}-composer
