--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.1",
         "league/flysystem-aws-s3-v3": "~1.0",
-        "league/flysystem-cached-adapter": "~1.0"
+        "league/flysystem-cached-adapter": "~1.0",
+        "spatie/flysystem-dropbox": "^1.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
