--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,63 @@
 stages:
     - build
+    - test
     - deploy
 
-composer:
+build_staging:
+  stage: build
+  tags:
+    - staging
+  only:
+    - staging
+  image: lorisleiva/laravel-docker:latest
+  before_script:
+    - cp .env.production .env
+    - echo "APP_ENV=local" >> .env
+  script:
+    - composer install --prefer-dist --no-ansi --no-interaction --no-progress --no-scripts
+    - php artisan key:generate
+  after_script:
+    - echo "APP_URL=http://localhost" >> .env
+
+  cache:
+    key: ${CI_COMMIT_REF_SLUG}-composer
+    paths:
+      - vendor/
+  artifacts:
+    paths:
+      - vendor/
+      - .env
+    expire_in: 1 days
+    when: always
+
+
+test_staging:
+  stage: test
+  tags:
+    - staging
+  only:
+    - staging
+  dependencies: []
+  script:
+    - phpcs --standard=PSR12 --extensions=php app/Http/Controllers/
+
+deploy_staging:
+  stage: deploy
+  only:
+    - staging
+  tags:
+    - staging
+  image: tiangolo/docker-with-compose
+  script:
+    - docker-compose -f docker-compose.staging.yml down
+    - docker-compose -f docker-compose.staging.yml up -d --force-recreate
+  after_script:
+    - docker exec qchan_api_1 php artisan migrate --force
+    - ln -s /var/www/storage/app/public/avatars public/avatars
+    - ln -s /var/www/storage/app/public/backgrounds public/backgrounds
+
+
+build_production:
   stage: build
   tags:
     - production
@@ -32,7 +87,7 @@ composer:
 
 
 
-deploy:
+deploy_production:
   stage: deploy
   only:
     - production
