added phpcs for Models in testing. phpcs on Models. Added route, views and controller method (destroy) for Users- in ProfilesController

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,7 @@ test_staging:
   dependencies: []
   script:
     - phpcs --standard=PSR12 --extensions=php app/Http/Controllers/
+    - phpcs --standard=PSR12 --extensions=php app/Models/
 
 deploy_staging:
   stage: deploy
