--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,9 +67,10 @@ build_production:
   image: lorisleiva/laravel-docker:latest
   before_script:
     - cp .env.production .env
-    - echo "FILESYSTEM_DRIVER=dropbox" >> .env
-    - echo "${DROPBOX_TOKEN}" >> .env
-    - echo "${DROPBOX_SECRET}" >> .env
+    - echo "FILESYSTEM_DRIVER=s3" >> .env
+    - echo "${AWS_BUCKET}" >> .env
+    - echo "${AWS_ACCESS_KEY_ID}" >> .env
+    - echo "${AWS_SECRET_ACCESS_KEY}" >> .env
     - echo "APP_URL=https://qchan.haakon.wtf/" >> .env
   script:
     - composer install --prefer-dist --no-ansi --no-interaction --no-progress --no-scripts
