added versioning to webpack (for cache busting), added logo as favicon

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=7ba84a3b38a725928cc1",
+    "/css/app.css": "/css/app.css?id=df916f5adf115edf83b6"
 }
