--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: "3.8"
+version: "3.9"
 
 services:
 
-  db:
-    image: postgres:13.1-alpine
+  postgres:
+    image: postgres:13.2-alpine
     volumes:
-      - postgres:/var/lib/postgresql/data
+      - pgsql_data:/var/lib/postgresql/data
     environment:
       - 'POSTGRES_PASSWORD=${DB_PASSWORD}'
       - 'POSTGRES_USER=${DB_USERNAME}'
@@ -14,5 +14,5 @@ services:
 
 
 volumes:
-  postgres:
+  pgsql_data:
     driver: local
