--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -42,10 +42,11 @@ services:
     environment:
       - 'POSTGRES_PASSWORD=${DB_PASSWORD}'
       - 'POSTGRES_USER=${DB_USERNAME}'
+      - 'POSTGRES_DB=${DB_DATABASE}'
     networks:
       - bridge
     ports:
-    - "5432:5432"
+      - "5432:5432"
 
 
 networks:
