--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -37,7 +37,7 @@ services:
   db:
     image: postgres:13.2-alpine
     volumes:
-      - postgres:/var/lib/postgresql/data
+      - pgsql_data:/var/lib/postgresql/data
     restart: unless-stopped
     environment:
       - 'POSTGRES_PASSWORD=${DB_PASSWORD}'
