--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -37,15 +37,13 @@ services:
   db:
     image: postgres:13.2-alpine
     volumes:
-      - pgsql_data:/var/lib/postgresql/data
+      - postgres:/var/lib/postgresql/data
     restart: unless-stopped
     environment:
       - 'POSTGRES_PASSWORD=${DB_PASSWORD}'
       - 'POSTGRES_USER=${DB_USERNAME}'
     networks:
       - bridge
-    ports:
-      - "5432:5432"
 
 
 networks:
@@ -55,5 +53,5 @@ networks:
     external: true
 
 volumes:
-  pgsql_data:
+  postgres:
     driver: local
