--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -23,16 +23,16 @@ services:
     networks:
       - bridge
 
-  db:
-    image: postgres:13.2-alpine
-    volumes:
-      - postgres:/var/lib/postgresql/data
-    environment:
-      - 'POSTGRES_PASSWORD=${DB_PASSWORD}'
-      - 'POSTGRES_USER=${DB_USERNAME}'
-    networks:
-      - bridge
-
+    postgres:
+      image: postgres:13.2-alpine
+      volumes:
+        - pgsql_data:/var/lib/postgresql/data
+      environment:
+        - 'POSTGRES_PASSWORD=${DB_PASSWORD}'
+        - 'POSTGRES_USER=${DB_USERNAME}'
+        - 'POSTGRES_DB=${DB_DATABASE}'
+      networks:
+        - bridge
 
 networks:
   bridge:
