--- a/.env.production
+++ b/.env.production
@@ -6,7 +6,7 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+DB_HOST=qchan_postgres_1
 DB_PORT=5432
 
 BROADCAST_DRIVER=log
