--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -24,7 +24,7 @@ services:
       - bridge
 
   postgres:
-    image: postgres:13.1-alpine
+    image: postgres:13.2-alpine
     volumes:
         - pgsql_data:/var/lib/postgresql/data
     environment:
@@ -33,6 +33,8 @@ services:
         - 'POSTGRES_DB=${DB_DATABASE}'
     networks:
         - bridge
+    ports:
+    - 6936:5432
 
 networks:
   bridge:
