--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -26,20 +26,17 @@ services:
   postgres:
     image: postgres:13.2-alpine
     volumes:
-        - pgsql_data:/var/lib/postgresql/data
+        - postgres:/var/lib/postgresql/data
     environment:
         - 'POSTGRES_PASSWORD=${DB_PASSWORD}'
         - 'POSTGRES_USER=${DB_USERNAME}'
-        - 'POSTGRES_DB=${DB_DATABASE}'
     networks:
         - bridge
-    ports:
-    - 6936:5432
 
 networks:
   bridge:
     driver: bridge
 
 volumes:
-  pgsql_data:
+  postgres:
     driver: local
