changed ports on compose, removed user, as default superuser is used anyways

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,9 +13,7 @@ build_composer_staging:
     - cp .env.production .env
     - echo "APP_ENV=local" >> .env
     - echo "APP_URL=http://localhost" >> .env
-    - echo "DB_DATABASE=postgres" >> .env
-    - echo "DB_USERNAME=postgres" >> .env
-    - echo "DB_PASSWORD=hunter2" >> .env
+    - echo "DB_PASSWORD=password" >> .env
   script:
     - composer install --prefer-dist --no-ansi --no-interaction --no-progress --no-scripts
     - php artisan key:generate
