--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -28,10 +28,11 @@ services:
     volumes:
       - pgsql_data:/var/lib/postgresql/data
     environment:
-        - 'POSTGRES_PASSWORD=${DB_PASSWORD}'
-        - 'POSTGRES_USER=${DB_USERNAME}'
+      - 'POSTGRES_PASSWORD=${DB_PASSWORD}'
     networks:
-        - bridge
+      - bridge
+    ports:
+      - 5432:5432
 
 networks:
   bridge:
