added build flag to the docker-compose up -d command in the gitlab-ci config to rebuild the image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -120,7 +120,7 @@ deploy_staging:
   image: tiangolo/docker-with-compose
   script:
     - docker-compose -f docker-compose.staging.yml down
-    - docker-compose -f docker-compose.staging.yml up -d --force-recreate
+    - docker-compose -f docker-compose.staging.yml up -d --build
   after_script:
     - docker exec qchan_api_1 php artisan migrate --force
     - ln -s /var/www/storage/app/public/avatars public/avatars
@@ -135,6 +135,6 @@ deploy_production:
   image: tiangolo/docker-with-compose
   script:
     - docker-compose -f docker-compose.prod.yml down
-    - docker-compose -f docker-compose.prod.yml up -d --force-recreate
+    - docker-compose -f docker-compose.prod.yml up -d --build
   after_script:
     - docker exec qchan_api_1 php artisan migrate --force
