--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,7 +61,7 @@ build_composer_production:
   tags:
     - production
   only:
-    - tags
+    - ${CI_COMMIT_TAG}
   image: lorisleiva/laravel-docker:latest
   before_script:
     - cp .env.production .env
@@ -91,7 +91,7 @@ build_npm_production:
   tags:
     - production
   only:
-    - tags
+    - ${CI_COMMIT_TAG}
   cache:
     key: ${CI_COMMIT_REF_SLUG}-npm
     paths:
@@ -131,7 +131,9 @@ deploy_production:
   tags:
     - production
   only:
-    - tags
+    - ${CI_COMMIT_TAG}
+  except:
+    - branches
   image: tiangolo/docker-with-compose
   script:
     - docker-compose -f docker-compose.prod.yml down
