--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,8 +60,8 @@ build_composer_production:
   stage: build
   tags:
     - production
-  only:
-    - /^([v]+[0-9]+[.]+[0-9])/
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^prod_[0-9]+\.[0-9]+$/'
   image: lorisleiva/laravel-docker:latest
   before_script:
     - cp .env.production .env
@@ -90,8 +90,8 @@ build_npm_production:
   stage: build
   tags:
     - production
-  only:
-    - /^([v]+[0-9]+[.]+[0-9])/
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^prod_[0-9]+\.[0-9]+$/'
   cache:
     key: ${CI_COMMIT_REF_SLUG}-npm
     paths:
@@ -130,10 +130,8 @@ deploy_production:
   stage: deploy
   tags:
     - production
-  only:
-    - /^([v]+[0-9]+[.]+[0-9])/
-  except:
-    - branches
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^prod_[0-9]+\.[0-9]+$/'
   image: tiangolo/docker-with-compose
   script:
     - docker-compose -f docker-compose.prod.yml down
