--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "autoprefixer": "^10.2.4",
         "axios": "^0.21.1",
         "bootstrap": "^4.0.0",
+        "browser-sync": "^2.26.14",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "cross-env": "^7.0",
         "jquery": "^3.2",
         "laravel-mix": "^6.0.13",
