--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "league/flysystem-cached-adapter": "~1.0"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.10",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.4.2",
